# razy-awslogs

./: Cargo.toml
src/: app.rs  errors.rs  main.rs
src/cmd/: get.rs
src/cmd/get/: event.rs  printer.rs  reader.rs  stream.rs
